<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/RL_release_note"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:minHeight="40dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/TV_release_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/release_note_title"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/TV_release_note_title"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/TV_release_note_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:textColor="@android:color/white"
                android:textSize="14dp" />
        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckedTextView
            android:id="@+id/CTV_release_note_knew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center"
            android:text="@string/release_note_close_remind"
            android:textColor="@color/button_default_text_color"
            android:tint="@color/button_default_text_color" />

        <com.kiminonawa.mydiary.shared.gui.MyDiaryButton
            android:id="@+id/But_release_note_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/CTV_release_note_knew"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/dialog_button_ok"
            android:textAllCaps="false" />

    </RelativeLayout>
</LinearLayout>
