<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LL_diary_topbar_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/SG_diary_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="100"
            segmentedgroup:sc_border_width="1dp"
            segmentedgroup:sc_corner_radius="5dp">


            <RadioButton
                android:id="@+id/But_diary_topbar_entries"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="0dp"
                android:layout_weight="25"
                android:padding="0dp"
                android:text="@string/segmented_entries"
                android:textAllCaps="false" />

            <RadioButton
                android:id="@+id/But_diary_topbar_calendar"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="0dp"
                android:layout_weight="25"
                android:padding="0dp"
                android:text="@string/segmented_calendar"
                android:textAllCaps="false" />

            <RadioButton
                android:id="@+id/But_diary_topbar_diary"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="0dp"
                android:layout_weight="25"
                android:padding="0dp"
                android:text="@string/segmented_Diary"
                android:textAllCaps="false" />
        </info.hoang8f.android.segmented.SegmentedGroup>

        <TextView
            android:id="@+id/TV_diary_topbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="20dp" />
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/ViewPager_diary_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/LL_diary_topbar_content" />

    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_height_5dp"
        android:layout_below="@id/LL_diary_topbar_content"
        android:background="@drawable/view_bottom_shadow" />


</RelativeLayout>
